# technicalhack

./: .gitmodules  CMakeLists.txt  README  README.md
libraries/cocos-headers/cocos2dx/: CCDirector.h
libraries/cocos-headers/cocos2dx/base_nodes/: CCNode.h
libraries/gd.h/include/: gd.h
libraries/gd.h/layers_scenes_transitions_nodes/: EditLevelLayer.h  EditorUI.h  FLAlertLayer.h  LevelBrowserLayer.h  LevelEditorLayer.h  PlayLayer.h
libraries/gd.h/level_nodes/: GJGameLevel.h
libraries/gd.h/manager_nodes/: GameLevelManager.h
libraries/gd.h/menu_nodes/: CCMenuItemSpriteExtra.h
libraries/gd.h/sprite_nodes/: ButtonSprite.h
libraries/imgui-hook/: imgui-hook.cpp
libraries/libdetours/: CMakeLists.txt
src/: HItbox.cpp  Hitbox.h  ObjectsID.h  Speedhack.cpp  dllmain.cpp  explorer.cpp  impl.hpp  includes.h  matnicehackutil.hpp  matplist.hpp  speedhack.h  utils.hpp
